--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -53,6 +53,7 @@
                 <li class = "mb-sm">Contágio</li>
                 <li class = "mb-sm">Bacurau</li>
 				<li class = "mb-sm">O Homem Invisível (2020)</li>
+                <li class = "mb-sm">O Poço</li>
             </ul>
         </div>
         
@@ -68,6 +69,10 @@
             <div class = "p-secao-sm">
                 <h5>Animes</h5>
             </div>
+            <ul>
+                <li class = "mb-sm">Naruto Shippuden</li>
+                <li class = "mb-sm">Triage X</li>
+            </ul>
             
             <div class = "p-secao-sm">
                 <h5>HQs</h5>                
