--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -1,239 +1,240 @@
 <%= content_for :title do %>
-    O que fiz enquanto vivi? -
+O que fiz enquanto vivi? -
 <% end %>
 
 <%= content_for :nav do%>
-  <%= render "navbar" %>
+<%= render "navbar" %>
 <% end %>
 
-<img src = "/assets/justice.jpg" class = "img-fluid">
+<img src="/assets/justice.jpg" class="img-fluid">
 
-<div class = "p-texto">
-    
-    <h1>O que fiz enquanto vivi?</h1><br/>
-    
-    A vida passa rápido demais, e isso me assusta. Quase todo dia algo novo e interessante é lançado e num mundo cada vez mais apressado, parece que estamos constantemente 
+<div class="p-texto">
+
+    <h1>O que fiz enquanto vivi?</h1><br />
+
+    A vida passa rápido demais, e isso me assusta. Quase todo dia algo novo e interessante é lançado e num mundo cada vez mais apressado, parece que estamos constantemente
     <strong>mais consumindo do que apreciando</strong>. O que mais me assusta nisso é o medo de quando chegar no fim (e estamos chegando no fim a cada segundo)
     sobrar apenas a sensação de que não aproveitamos a viagem suficientemente bem. </p>
-    
+
     Foi com esse pensamento que em 2017 prometi a mim mesmo que iria tentar apreciar mais a viagem, mesmo (e principalmente) naqueles pontos que eu não sou o protagonista,
     e sim um mero espectador de uma obra. Foi um <strong>compromisso</strong> de assistir mais filmes, séries, terminar mais jogos, ler mais HQs e livros.</p>
-    
+
     Nessa página segue portanto o registro desse <strong>compromisso</strong>.
-    
-    <hr/>
+
+    <hr />
     <!-- 2020 -->
-    <div class = "p-secao">
+    <div class="p-secao">
         <h3>2020</h3>
     </div>
-    
-    <div class = "row">
-        <div class = "col">
-            <div class = "p-secao-sm">
-                <h5>Games</h5> 
-                
+
+    <div class="row">
+        <div class="col">
+            <div class="p-secao-sm">
+                <h5>Games</h5>
+
             </div>
             <ul>
             </ul>
-            
-            <div class = "p-secao-sm">
+
+            <div class="p-secao-sm">
                 <h5>Filmes</h5>
             </div>
             <ul>
-                <li class = "mb-sm">Frozen 2</li>
-                <li class = "mb-sm">Círculo de Fogo</li>
-                <li class = "mb-sm">Jumanji</li>
-                <li class = "mb-sm">Esquadrão Suicida</li>
-                <li class = "mb-sm">Dois Papas</li>
-                <li class = "mb-sm">Minha mãe é uma peça 3</li>
-                <li class = "mb-sm">Bad Boys - Para Sempre</li>
-                <li class = "mb-sm">Parasita</li>
-                <li class = "mb-sm">1917</li>
-                <li class = "mb-sm">Snow Pierce</li>
-                <li class = "mb-sm">Contágio</li>
-                <li class = "mb-sm">Bacurau</li>
-				<li class = "mb-sm">O Homem Invisível (2020)</li>
-                <li class = "mb-sm">O Poço</li>
+                <li class="mb-sm">Frozen 2</li>
+                <li class="mb-sm">Círculo de Fogo</li>
+                <li class="mb-sm">Jumanji</li>
+                <li class="mb-sm">Esquadrão Suicida</li>
+                <li class="mb-sm">Dois Papas</li>
+                <li class="mb-sm">Minha mãe é uma peça 3</li>
+                <li class="mb-sm">Bad Boys - Para Sempre</li>
+                <li class="mb-sm">Parasita</li>
+                <li class="mb-sm">1917</li>
+                <li class="mb-sm">Snow Pierce</li>
+                <li class="mb-sm">Contágio</li>
+                <li class="mb-sm">Bacurau</li>
+                <li class="mb-sm">O Homem Invisível (2020)</li>
+                <li class="mb-sm">O Poço</li>
+                <li class="mb-sm">O Resgate</li>
             </ul>
         </div>
-        
-        <div class = "col">
-            <div class = "p-secao-sm">
+
+        <div class="col">
+            <div class="p-secao-sm">
                 <h5>Séries</h5>
             </div>
             <ul>
-                <li class = "mb-sm">The Boys - S01</li>
-                <li class = "mb-sm">Westworld - S01</li>
+                <li class="mb-sm">The Boys - S01</li>
+                <li class="mb-sm">Westworld - S01</li>
             </ul>
-            
-            <div class = "p-secao-sm">
+
+            <div class="p-secao-sm">
                 <h5>Animes</h5>
             </div>
             <ul>
-                <li class = "mb-sm">Naruto Shippuden</li>
-                <li class = "mb-sm">Triage X</li>
+                <li class="mb-sm">Naruto Shippuden</li>
+                <li class="mb-sm">Triage X</li>
             </ul>
-            
-            <div class = "p-secao-sm">
-                <h5>HQs</h5>                
+
+            <div class="p-secao-sm">
+                <h5>HQs</h5>
             </div>
             <ul>
             </ul>
         </div>
     </div>
-    <hr/>
-    
+    <hr />
+
     <!-- 2019 -->
-    <div class = "p-secao">
+    <div class="p-secao">
         <h3>2019</h3>
     </div>
-    
-    <div class = "row">
-        <div class = "col">
-            <div class = "p-secao-sm">
-                <h5>Games (3) <small>(Mesma qtd. 2018)</small></h5> 
-                
+
+    <div class="row">
+        <div class="col">
+            <div class="p-secao-sm">
+                <h5>Games (3) <small>(Mesma qtd. 2018)</small></h5>
+
             </div>
             <ul>
-                <li class = "mb-sm">The Awesome Adventures of Captain Spirit</li>
-                <li class = "mb-sm">A Jornada - FIFA19</li>
-                <li class = "mb-sm">Detroit: Become Human</li>
+                <li class="mb-sm">The Awesome Adventures of Captain Spirit</li>
+                <li class="mb-sm">A Jornada - FIFA19</li>
+                <li class="mb-sm">Detroit: Become Human</li>
             </ul>
-            
-            <div class = "p-secao-sm">
+
+            <div class="p-secao-sm">
                 <h5>Filmes (29) <small>(+10 vs 2018)</small></h5>
             </div>
             <ul>
-                <li class = "mb-sm">Black Mirror Bandersnatch</li>
-                <li class = "mb-sm">Bird Box</li>
-                <li class = "mb-sm">Aquaman</li>
-                <li class = "mb-sm">Wifi Ralph</li>
-                <li class = "mb-sm">Homem-Aranha no Aranhaverso</li>
-                <li class = "mb-sm">Como Treinar Seu Dragão 3</li>
-                <li class = "mb-sm">Alita - Maquina de Combate</li>
-                <li class = "mb-sm">Capitã Marvel</li>
-                <li class = "mb-sm">Spiderman - Homecoming</li>
-                <li class = "mb-sm">Vingadores - Ultimato</li>
-                <li class = "mb-sm">Até o último homem</li>
-                <li class = "mb-sm">Jumanji - Bem-vindo à Selva</li>
-                <li class = "mb-sm">Aladdin (2019)</li>
-                <li class = "mb-sm">Toy Story 4</li>
-                <li class = "mb-sm">Turma da Mônica - Laços</li>
-                <li class = "mb-sm">Rei Leão (2019)</li>
-                <li class = "mb-sm">Homem-Aranha - Longe de Casa</li>
-                <li class = "mb-sm">Infiltrado na Klan</li>
-                <li class = "mb-sm">Kill Bill Vol.1</li>
-                <li class = "mb-sm">Kill Bill Vol.2</li>
-                <li class = "mb-sm">Os Estagiários</li>
-                <li class = "mb-sm">Joker</li>
-                <li class = "mb-sm">Malévola</li>
-                <li class = "mb-sm">Malévola: Dona do mal</li>
-                <li class = "mb-sm">Nasce uma estrela</li>
-                <li class = "mb-sm">Exterminador do Futuro: Destino Sombrio</li>
-                <li class = "mb-sm">Velozes e Furiosos 8</li>
-                <li class = "mb-sm">Procurando Dory</li>
-                <li class = "mb-sm">Senhor dos Anéis: A Sociedade do Anel</li>
+                <li class="mb-sm">Black Mirror Bandersnatch</li>
+                <li class="mb-sm">Bird Box</li>
+                <li class="mb-sm">Aquaman</li>
+                <li class="mb-sm">Wifi Ralph</li>
+                <li class="mb-sm">Homem-Aranha no Aranhaverso</li>
+                <li class="mb-sm">Como Treinar Seu Dragão 3</li>
+                <li class="mb-sm">Alita - Maquina de Combate</li>
+                <li class="mb-sm">Capitã Marvel</li>
+                <li class="mb-sm">Spiderman - Homecoming</li>
+                <li class="mb-sm">Vingadores - Ultimato</li>
+                <li class="mb-sm">Até o último homem</li>
+                <li class="mb-sm">Jumanji - Bem-vindo à Selva</li>
+                <li class="mb-sm">Aladdin (2019)</li>
+                <li class="mb-sm">Toy Story 4</li>
+                <li class="mb-sm">Turma da Mônica - Laços</li>
+                <li class="mb-sm">Rei Leão (2019)</li>
+                <li class="mb-sm">Homem-Aranha - Longe de Casa</li>
+                <li class="mb-sm">Infiltrado na Klan</li>
+                <li class="mb-sm">Kill Bill Vol.1</li>
+                <li class="mb-sm">Kill Bill Vol.2</li>
+                <li class="mb-sm">Os Estagiários</li>
+                <li class="mb-sm">Joker</li>
+                <li class="mb-sm">Malévola</li>
+                <li class="mb-sm">Malévola: Dona do mal</li>
+                <li class="mb-sm">Nasce uma estrela</li>
+                <li class="mb-sm">Exterminador do Futuro: Destino Sombrio</li>
+                <li class="mb-sm">Velozes e Furiosos 8</li>
+                <li class="mb-sm">Procurando Dory</li>
+                <li class="mb-sm">Senhor dos Anéis: A Sociedade do Anel</li>
             </ul>
         </div>
-        
-        <div class = "col">
-            <div class = "p-secao-sm">
+
+        <div class="col">
+            <div class="p-secao-sm">
                 <h5>Séries (5) <small>(Mesma qtd. 2018)</small></h5>
             </div>
             <ul>
-                <li class = "mb-sm">Shooter (Netflix) - S01</li>
-                <li class = "mb-sm">Game of Thrones - S08</li>
-                <li class = "mb-sm">Dark - S02</li>
-                <li class = "mb-sm">Stranger Things - S03</li>
-                <li class = "mb-sm">The Witcher - S01</li>
+                <li class="mb-sm">Shooter (Netflix) - S01</li>
+                <li class="mb-sm">Game of Thrones - S08</li>
+                <li class="mb-sm">Dark - S02</li>
+                <li class="mb-sm">Stranger Things - S03</li>
+                <li class="mb-sm">The Witcher - S01</li>
             </ul>
-            
-            <div class = "p-secao-sm">
+
+            <div class="p-secao-sm">
                 <h5>Animes (0) <small>(-1 vs 2018)</small></h5>
             </div>
-            
-            <div class = "p-secao-sm">
-                <h5>HQs (1) <small>(-6 vs 2018)</small></h5>                
+
+            <div class="p-secao-sm">
+                <h5>HQs (1) <small>(-6 vs 2018)</small></h5>
             </div>
             <ul>
-                <li class = "mb-sm">Ashe - Mãe de Guerra</li>
+                <li class="mb-sm">Ashe - Mãe de Guerra</li>
             </ul>
         </div>
     </div>
-    <hr/>
-    
+    <hr />
+
     <!-- 2018 -->
-    <div class = "p-secao">
-        <h3>2018</h3>    
+    <div class="p-secao">
+        <h3>2018</h3>
     </div>
-    
-    <div class = "row">
-        <div class = "col">
-            <div class = "p-secao-sm">
+
+    <div class="row">
+        <div class="col">
+            <div class="p-secao-sm">
                 <h5>Games (3)</h5>
             </div>
             <ul>
-                <li class = "mb-sm">Life is Strange</li>
-                <li class = "mb-sm">Forza Horizon 3 - DEMO </li>
-                <li class = "mb-sm">Father and Son</li>
+                <li class="mb-sm">Life is Strange</li>
+                <li class="mb-sm">Forza Horizon 3 - DEMO </li>
+                <li class="mb-sm">Father and Son</li>
             </ul>
-             
-            <div class = "p-secao-sm">
+
+            <div class="p-secao-sm">
                 <h5>Filmes (19)</h5>
             </div>
             <ul>
-                <li class = "mb-sm">Doctor Strange </li>
-                <li class = "mb-sm">Bright </li>
-                <li class = "mb-sm">Thor: Ragnarok </li>
-                <li class = "mb-sm">Pantera Negra</li>
-                <li class = "mb-sm">Festa da Salsicha</li>
-                <li class = "mb-sm">A Teoria de Tudo</li>
-                <li class = "mb-sm">Pirates of the Caribbean: Dead Men Tell No Tales</li>
-                <li class = "mb-sm">Vigadores: Guerra Infinita</li>
-                <li class = "mb-sm">Sense8 - Episódio Final</li>
-                <li class = "mb-sm">Valente</li>
-                <li class = "mb-sm">Minions</li>
-                <li class = "mb-sm">Os Incríveis 2</li>
-                <li class = "mb-sm">Guardiões da Galáxia</li>
-                <li class = "mb-sm">Assassinato no expresso do oriente</li>
-                <li class = "mb-sm">Missão Impossível: Efeito Fallout</li>
-                <li class = "mb-sm">Baby Driver</li>
-                <li class = "mb-sm">Planeta dos Macacos - O confronto</li>
-                <li class = "mb-sm">Homem-vespa e a Formiga</li>
-                <li class = "mb-sm">Animais Fantásticos - Crimes de Grindwald</li>
+                <li class="mb-sm">Doctor Strange </li>
+                <li class="mb-sm">Bright </li>
+                <li class="mb-sm">Thor: Ragnarok </li>
+                <li class="mb-sm">Pantera Negra</li>
+                <li class="mb-sm">Festa da Salsicha</li>
+                <li class="mb-sm">A Teoria de Tudo</li>
+                <li class="mb-sm">Pirates of the Caribbean: Dead Men Tell No Tales</li>
+                <li class="mb-sm">Vigadores: Guerra Infinita</li>
+                <li class="mb-sm">Sense8 - Episódio Final</li>
+                <li class="mb-sm">Valente</li>
+                <li class="mb-sm">Minions</li>
+                <li class="mb-sm">Os Incríveis 2</li>
+                <li class="mb-sm">Guardiões da Galáxia</li>
+                <li class="mb-sm">Assassinato no expresso do oriente</li>
+                <li class="mb-sm">Missão Impossível: Efeito Fallout</li>
+                <li class="mb-sm">Baby Driver</li>
+                <li class="mb-sm">Planeta dos Macacos - O confronto</li>
+                <li class="mb-sm">Homem-vespa e a Formiga</li>
+                <li class="mb-sm">Animais Fantásticos - Crimes de Grindwald</li>
             </ul>
         </div>
-        
-        <div class = "col">
-            <div class = "p-secao-sm">
+
+        <div class="col">
+            <div class="p-secao-sm">
                 <h5>Séries (5)</h5>
             </div>
             <ul>
-                <li class = "mb-sm">Stranger Things </li>
-                <li class = "mb-sm">Dark </li>
-                <li class = "mb-sm">Cosmos: Uma odisséia no Espaço-Tempo </li>
-                <li class = "mb-sm">La Casa de Papel S01 - S02</li>
-                <li class = "mb-sm">Manhunt: UNABOMBER</li>
+                <li class="mb-sm">Stranger Things </li>
+                <li class="mb-sm">Dark </li>
+                <li class="mb-sm">Cosmos: Uma odisséia no Espaço-Tempo </li>
+                <li class="mb-sm">La Casa de Papel S01 - S02</li>
+                <li class="mb-sm">Manhunt: UNABOMBER</li>
             </ul>
-            
-            <div class = "p-secao-sm">
+
+            <div class="p-secao-sm">
                 <h5>Animes (1)</h5>
             </div>
             <ul>
-                <li class = "mb-sm">One Punch-man</li>
+                <li class="mb-sm">One Punch-man</li>
             </ul>
-            
-            <div class = "p-secao-sm">
+
+            <div class="p-secao-sm">
                 <h5>HQs (7)</h5>
             </div>
             <ul>
-                <li class = "mb-sm">Guerras Secretas: Guerra Civil</li>
-                <li class = "mb-sm">Mulher Maravilha - Sangue</li>
-                <li class = "mb-sm">Mulher Maravilha - Direito de Nascença</li>
-                <li class = "mb-sm">Mulher Maravilha - Força</li>
-                <li class = "mb-sm">Mulher Maravilha - Guerra</li>
-                <li class = "mb-sm">Mulher Maravilha - Pele</li>
-                <li class = "mb-sm">Miss Marvel - Danos por segundo</li>
+                <li class="mb-sm">Guerras Secretas: Guerra Civil</li>
+                <li class="mb-sm">Mulher Maravilha - Sangue</li>
+                <li class="mb-sm">Mulher Maravilha - Direito de Nascença</li>
+                <li class="mb-sm">Mulher Maravilha - Força</li>
+                <li class="mb-sm">Mulher Maravilha - Guerra</li>
+                <li class="mb-sm">Mulher Maravilha - Pele</li>
+                <li class="mb-sm">Miss Marvel - Danos por segundo</li>
             </ul>
         </div>
     </div>
