--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -54,6 +54,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Bacurau</li>
                 <li class="mb-sm">O Homem Invisível (2020)</li>
                 <li class="mb-sm">O Poço</li>
+                <li class="mb-sm">Milagre da Cela 7</li>
                 <li class="mb-sm">O Resgate</li>
             </ul>
         </div>
