--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -65,7 +65,8 @@ O que fiz enquanto vivi? -
             </div>
             <ul>
                 <li class="mb-sm">The Boys - S01</li>
-                <li class="mb-sm">Westworld - S01</li>
+                <li class="mb-sm">Westworld - S01, S02</li>
+                <li class="mb-sm">Vikings = S01</li>
             </ul>
 
             <div class="p-secao-sm">
