--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -56,6 +56,8 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">O Poço</li>
                 <li class="mb-sm">Milagre da Cela 7</li>
                 <li class="mb-sm">O Resgate</li>
+                <li class="mb-sm">About Time</li>
+                <li class="mb-sm">Até que a sorte os separe 2</li>
             </ul>
         </div>
 
@@ -66,7 +68,8 @@ O que fiz enquanto vivi? -
             <ul>
                 <li class="mb-sm">The Boys - S01</li>
                 <li class="mb-sm">Westworld - S01, S02</li>
-                <li class="mb-sm">Vikings = S01</li>
+                <li class="mb-sm">Vikings = S01 - S06</li>
+                <li class="mb-sm">Dark - S03</li>
             </ul>
 
             <div class="p-secao-sm">
