--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -58,6 +58,10 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">O Resgate</li>
                 <li class="mb-sm">About Time</li>
                 <li class="mb-sm">Até que a sorte os separe 2</li>
+                <li class="mb-sm">Project Power</li>
+                <li class="mb-sm">Marley e Eu</li>
+                <li class="mb-sm">Entre facas e segredos</li>
+
             </ul>
         </div>
 
