--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -61,7 +61,9 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Project Power</li>
                 <li class="mb-sm">Marley e Eu</li>
                 <li class="mb-sm">Entre facas e segredos</li>
-
+                <li class="mb-sm">Your Name</li>
+                <li class="mb-sm">Socorro! Virei uma garota!</li>
+                <li class="mb-sm">Viva! A vida é uma festa!</li>
             </ul>
         </div>
 
@@ -82,13 +84,17 @@ O que fiz enquanto vivi? -
             <ul>
                 <li class="mb-sm">Naruto Shippuden</li>
                 <li class="mb-sm">Triage X</li>
+                <li class="mb-sm">Kekegurui S01 - S02</li>
             </ul>
 
             <div class="p-secao-sm">
                 <h5>HQs</h5>
+
             </div>
             <ul>
+                <li class="mb-sm">Wonder Woman Bones</li>
             </ul>
+
         </div>
     </div>
     <hr />
