--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -64,10 +64,19 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Your Name</li>
                 <li class="mb-sm">Socorro! Virei uma garota!</li>
                 <li class="mb-sm">Viva! A vida é uma festa!</li>
+                <li class="mb-sm">Moana</li>
             </ul>
         </div>
 
         <div class="col">
+            <div class="p-secao-sm">
+                <h5>Documentários</h5>
+            </div>
+            <ul>
+                <li class="mb-sm">/o dilema das redes</li>
+                <li class="mb-sm">League of Legends</li>
+            </ul>
+
             <div class="p-secao-sm">
                 <h5>Séries</h5>
             </div>
