--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -65,6 +65,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Socorro! Virei uma garota!</li>
                 <li class="mb-sm">Viva! A vida é uma festa!</li>
                 <li class="mb-sm">Moana</li>
+                <li class="mb-sm">Mulan 2020</li>
             </ul>
         </div>
 
