--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -27,6 +27,16 @@ O que fiz enquanto vivi? -
         <h3>2020</h3>
     </div>
 
+    <div class="p-secao-sm">
+        <h5>Conquistas Pessoais</h5>
+    </div>
+    <ul>
+        <li class="mb-sm">Começar a jogar e mestrar RPG</li>
+        <li class="mb-sm">Começar fazer desenho/pintura digital profissionalmente</li>
+        <li class="mb-sm">Ter vencido "a barreira dos 22 dias" do Todoist</li>
+        <li class="mb-sm">Ter começado um canal no YouTube (Dotcode)</li>
+    </ul>
+
     <div class="row">
         <div class="col">
             <div class="p-secao-sm">
