--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -35,6 +35,7 @@ O que fiz enquanto vivi? -
         <li class="mb-sm">Começar fazer desenho/pintura digital profissionalmente</li>
         <li class="mb-sm">Ter vencido "a barreira dos 22 dias" do Todoist</li>
         <li class="mb-sm">Ter começado um canal no YouTube (Dotcode)</li>
+        <li class="mb-sm">Ter FINALMENTE terminado Naruto Shippuden</li>
     </ul>
 
     <div class="row">
@@ -76,6 +77,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Viva! A vida é uma festa!</li>
                 <li class="mb-sm">Moana</li>
                 <li class="mb-sm">Mulan 2020</li>
+                <li class="mb-sm">365 Days</li>
             </ul>
         </div>
 
@@ -94,7 +96,7 @@ O que fiz enquanto vivi? -
             <ul>
                 <li class="mb-sm">The Boys - S01</li>
                 <li class="mb-sm">Westworld - S01, S02</li>
-                <li class="mb-sm">Vikings = S01 - S06</li>
+                <li class="mb-sm">Vikings - S01 - S06</li>
                 <li class="mb-sm">Dark - S03</li>
             </ul>
 
