--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -42,9 +42,9 @@ O que fiz enquanto vivi? -
         <div class="col">
             <div class="p-secao-sm">
                 <h5>Games</h5>
-
             </div>
             <ul>
+                <li class="mb-sm">Dark Souls II</li>
             </ul>
 
             <div class="p-secao-sm">
