--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -45,6 +45,8 @@ O que fiz enquanto vivi? -
             </div>
             <ul>
                 <li class="mb-sm">Dark Souls II</li>
+                <li class="mb-sm">What Remains of Edith Finch</li>
+                <li class="mb-sm">Journey</li>
             </ul>
 
             <div class="p-secao-sm">
