--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -47,6 +47,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Dark Souls II</li>
                 <li class="mb-sm">What Remains of Edith Finch</li>
                 <li class="mb-sm">Journey</li>
+                <li class="mb-sm">GRIS</li>
             </ul>
 
             <div class="p-secao-sm">
