--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -49,6 +49,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Journey</li>
                 <li class="mb-sm">GRIS</li>
                 <li class="mb-sm">Florence</li>
+                <li class="mb-sm">Hellblade: Senua's Sacrifice</li>
             </ul>
 
             <div class="p-secao-sm">
@@ -82,6 +83,10 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Moana</li>
                 <li class="mb-sm">Mulan 2020</li>
                 <li class="mb-sm">365 Days</li>
+                <li class="mb-sm">Tudo bem no Natal que vem</li>
+                <li class="mb-sm">Quarteto Fantástico (2015)</li>
+                <li class="mb-sm">Wonder Woman 84</li>
+
             </ul>
         </div>
 
