--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -86,7 +86,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Tudo bem no Natal que vem</li>
                 <li class="mb-sm">Quarteto Fantástico (2015)</li>
                 <li class="mb-sm">Wonder Woman 84</li>
-
+                <li class="mb-sm">Soul (2020)</li>
             </ul>
         </div>
 
