--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -24,6 +24,63 @@ O que fiz enquanto vivi? -
     <hr />
     <!-- 2020 -->
     <div class="p-secao">
+        <h3>2021</h3>
+    </div>
+
+    <div class="p-secao-sm">
+        <h5>Conquistas Pessoais</h5>
+    </div>
+    <ul>
+    </ul>
+
+    <div class="row">
+        <div class="col">
+            <div class="p-secao-sm">
+                <h5>Games</h5>
+            </div>
+            <ul>
+            </ul>
+
+            <div class="p-secao-sm">
+                <h5>Filmes</h5>
+            </div>
+            <ul>
+                <li class="mb-sm">Central do Brasil</li>
+            </ul>
+        </div>
+
+        <div class="col">
+            <div class="p-secao-sm">
+                <h5>Documentários</h5>
+            </div>
+            <ul>
+            </ul>
+
+            <div class="p-secao-sm">
+                <h5>Séries</h5>
+            </div>
+            <ul>
+            </ul>
+
+            <div class="p-secao-sm">
+                <h5>Animes</h5>
+            </div>
+            <ul>
+            </ul>
+
+            <div class="p-secao-sm">
+                <h5>HQs</h5>
+
+            </div>
+            <ul>
+            </ul>
+
+        </div>
+    </div>
+    <hr />
+
+    <!-- 2020 -->
+    <div class="p-secao">
         <h3>2020</h3>
     </div>
 
@@ -41,7 +98,7 @@ O que fiz enquanto vivi? -
     <div class="row">
         <div class="col">
             <div class="p-secao-sm">
-                <h5>Games</h5>
+                <h5>Games (6) <small>(+3 vs 2019)</small></h5>
             </div>
             <ul>
                 <li class="mb-sm">Dark Souls II</li>
@@ -53,7 +110,7 @@ O que fiz enquanto vivi? -
             </ul>
 
             <div class="p-secao-sm">
-                <h5>Filmes</h5>
+                <h5>Filmes (32) <small>(+3 vs 2019)</small></h5>
             </div>
             <ul>
                 <li class="mb-sm">Frozen 2</li>
@@ -92,7 +149,7 @@ O que fiz enquanto vivi? -
 
         <div class="col">
             <div class="p-secao-sm">
-                <h5>Documentários</h5>
+                <h5>Documentários (2) <small>(+2 vs 2019)</small></h5>
             </div>
             <ul>
                 <li class="mb-sm">/o dilema das redes</li>
@@ -100,7 +157,7 @@ O que fiz enquanto vivi? -
             </ul>
 
             <div class="p-secao-sm">
-                <h5>Séries</h5>
+                <h5>Séries (4) <small>(-1 vs 2019)</small></h5>
             </div>
             <ul>
                 <li class="mb-sm">The Boys - S01</li>
@@ -110,7 +167,7 @@ O que fiz enquanto vivi? -
             </ul>
 
             <div class="p-secao-sm">
-                <h5>Animes</h5>
+                <h5>Animes (3) <small>(+3 vs 2018)</small></h5>
             </div>
             <ul>
                 <li class="mb-sm">Naruto Shippuden</li>
@@ -119,7 +176,7 @@ O que fiz enquanto vivi? -
             </ul>
 
             <div class="p-secao-sm">
-                <h5>HQs</h5>
+                <h5>HQs (1) <small>(Mesma qtd. 2019)</small></h5>
 
             </div>
             <ul>
