--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -157,13 +157,14 @@ O que fiz enquanto vivi? -
             </ul>
 
             <div class="p-secao-sm">
-                <h5>Séries (4) <small>(-1 vs 2019)</small></h5>
+                <h5>Séries (5) <small>(Mesma qtd. 2019)</small></h5>
             </div>
             <ul>
                 <li class="mb-sm">The Boys - S01</li>
                 <li class="mb-sm">Westworld - S01, S02</li>
                 <li class="mb-sm">Vikings - S01 - S06</li>
                 <li class="mb-sm">Dark - S03</li>
+                <li class="mb-sm">O Gambito da Rainha</li>
             </ul>
 
             <div class="p-secao-sm">
