--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -46,6 +46,8 @@ O que fiz enquanto vivi? -
             </div>
             <ul>
                 <li class="mb-sm">Central do Brasil</li>
+                <li class="mb-sm">Top Gun - Ases Indomáveis</li>
+                <li class="mb-sm">Viagem à Lua (1902)</li>
             </ul>
         </div>
 
@@ -60,6 +62,7 @@ O que fiz enquanto vivi? -
                 <h5>Séries</h5>
             </div>
             <ul>
+                <li class="mb-sm">Lupin</li>
             </ul>
 
             <div class="p-secao-sm">
