add jojo rabbit

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -48,6 +48,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Central do Brasil</li>
                 <li class="mb-sm">Top Gun - Ases Indomáveis</li>
                 <li class="mb-sm">Viagem à Lua (1902)</li>
+                <li class="mb-sm">JoJo Rabbit</li>
             </ul>
         </div>
 
