adicionado os dois jao fraco

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -49,6 +49,8 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Top Gun - Ases Indomáveis</li>
                 <li class="mb-sm">Viagem à Lua (1902)</li>
                 <li class="mb-sm">JoJo Rabbit</li>
+                <li class="mb-sm">John Wick - De volta ao jogo</li>
+                <li class="mb-sm">John Wick - Um novo dia pra matar</li>
             </ul>
         </div>
 
