o diabo de cada dia

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -51,6 +51,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">JoJo Rabbit</li>
                 <li class="mb-sm">John Wick - De volta ao jogo</li>
                 <li class="mb-sm">John Wick - Um novo dia pra matar</li>
+                <li class="mb-sm">O Diabo de Cada Dia</li>
             </ul>
         </div>
 
