--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -52,6 +52,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">John Wick - De volta ao jogo</li>
                 <li class="mb-sm">John Wick - Um novo dia pra matar</li>
                 <li class="mb-sm">O Diabo de Cada Dia</li>
+                <li class="mb-sm">John Wick - Parabellum</li>
             </ul>
         </div>
 
