--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -53,6 +53,8 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">John Wick - Um novo dia pra matar</li>
                 <li class="mb-sm">O Diabo de Cada Dia</li>
                 <li class="mb-sm">John Wick - Parabellum</li>
+                <li class="mb-sm">Venom</li>
+                <li class="mb-sm">Logan</li>
             </ul>
         </div>
 
