--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -55,6 +55,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">John Wick - Parabellum</li>
                 <li class="mb-sm">Venom</li>
                 <li class="mb-sm">Logan</li>
+                <li class="mb-sm">Tenet</li>
             </ul>
         </div>
 
