como que eu era antes de tu

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -56,6 +56,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Venom</li>
                 <li class="mb-sm">Logan</li>
                 <li class="mb-sm">Tenet</li>
+                <li class="mb-sm">Como eu era antes de você</li>
             </ul>
         </div>
 
