--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -57,6 +57,7 @@ O que fiz enquanto vivi? -
                 <li class="mb-sm">Logan</li>
                 <li class="mb-sm">Tenet</li>
                 <li class="mb-sm">Como eu era antes de você</li>
+                <li class="mb-sm">Lucicreide vai à Marte</li>
             </ul>
         </div>
 
